emulate srgb format for generateMipmap

First, do sampling for a srgb texture, converting it to a linear
texture. Then generateMipmap in rgb format, and do another sampling to
convert rgb texture to srgb one.

BUG=634519
TEST=conformance2/textures/misc/tex-srgb-mipmap.html
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2318313004
Cr-Commit-Position: refs/heads/master@{#424377}

Former-commit-id: da573a8ab571bb73d3539a66abbe5c2efd47d7b7