gpu/command_buffer/service/gles2_cmd_srgb_converter.h
@@ -51,6 +51,10 @@ class GPU_EXPORT SRGBConverter {
       bool encode,
       bool enable_scissor_test);
 
+  void GenerateMipmap(const gles2::GLES2Decoder* decoder,
+                      Texture* tex,
+                      GLenum target);
+
  private:
   void InitializeSRGBConverterProgram();
   scoped_refptr<const gles2::FeatureInfo> feature_info_;
